# RevyCraft

./: Cargo.toml  LICENSE-MIT  README.md  deny.toml  server.properties.example
apps/client/: Cargo.toml
apps/client/src/: interaction.rs  main.rs
apps/client/src/world/: render.rs  save.rs  tests.rs
apps/revy-server/: Cargo.toml
apps/revy-server/src/: admin_surface.rs  admin_transport.rs  main.rs  process_surfaces.rs  upgrade.rs
apps/revy-server/tests/: non_interactive_stdin.rs  upgrade_runtime.rs  upgrade_runtime_test.rs
apps/revy-server/tests/support/: mod.rs
apps/revy-server/tests/upgrade_runtime/: common.rs  console_cases.rs  failure_cases.rs  lock.rs  options.rs  permission_cases.rs  sessions.rs  success_freeze_cases.rs  success_online_cases.rs  success_play_cases.rs  success_status_cases.rs  success_support.rs
apps/server/: Cargo.toml
apps/server/src/: admin_transport.rs  grpc.rs  main.rs  process_surfaces.rs  upgrade.rs
apps/server/tests/: non_interactive_stdin.rs  upgrade_runtime.rs
apps/server/tests/support/: mod.rs
crates/content/mc-content-api/: Cargo.toml
crates/content/mc-content-api/src/: lib.rs
crates/content/mc-content-canonical/: Cargo.toml
crates/content/mc-content-canonical/src/: catalog.rs  gameplay.rs  lib.rs
crates/content/revy-voxel-rules/: Cargo.toml
crates/content/revy-voxel-rules/src/: lib.rs
crates/core/mc-core/: Cargo.toml
crates/core/mc-core/src/: catalog.rs  core.rs  events.rs  gameplay.rs  inventory.rs  lib.rs  player.rs  tests.rs  world.rs
crates/core/mc-core/src/core/: canonical.rs  command.rs  inventory.rs  login.rs  mining.rs  mod.rs  mutation.rs  projection.rs  state_backend.rs  tick.rs  transaction.rs  world.rs
crates/core/mc-core/src/core/inventory/: click.rs  crafting.rs  furnace.rs  lifecycle.rs  mod.rs  state.rs  sync.rs  util.rs
crates/core/mc-core/src/tests/: general.rs  inventory.rs  support.rs
crates/core/revy-core/: Cargo.toml
crates/core/revy-core/src/: capabilities.rs  event.rs  ids.rs  lib.rs  overlay.rs  revision.rs  routing.rs  tests.rs
crates/core/revy-voxel-core/: Cargo.toml
crates/core/revy-voxel-core/src/: events.rs  inventory.rs  lib.rs  player.rs  world.rs
crates/core/revy-voxel-core/src/core/: canonical.rs  command.rs  mining.rs  mod.rs  mutation.rs  state_backend.rs  tick.rs  transaction.rs  world.rs
crates/core/revy-voxel-core/src/core/inventory/: click.rs  lifecycle.rs  mod.rs  state.rs  sync.rs
crates/core/revy-voxel-core/src/tests/: support.rs
crates/model/revy-voxel-model/: Cargo.toml
crates/model/revy-voxel-model/src/: lib.rs
crates/plugin/mc-plugin-api/: Cargo.toml
crates/plugin/mc-plugin-api/src/: abi.rs  auth_codec.rs  gameplay_codec.rs  host_api.rs  lib.rs  manifest.rs  protocol_codec.rs  storage_codec.rs
crates/plugin/mc-plugin-api/src/codec/: admin.rs  admin_surface.rs  admin_transport.rs  admin_ui.rs  auth.rs  gameplay.rs  mod.rs  protocol.rs  storage.rs
crates/plugin/mc-plugin-api/src/codec/__internal/: auth_semantic.rs  binary.rs  gameplay_semantic.rs  inventory.rs  mod.rs  protocol_semantic.rs  shared.rs  storage_semantic.rs
crates/plugin/mc-plugin-api/src/codec/internal/: binary.rs
crates/plugin/mc-plugin-host/: Cargo.toml
crates/plugin/mc-plugin-host/src/: __test_hooks.rs  config.rs  error.rs  lib.rs  plugin_host.rs  registry.rs  runtime.rs  test_support.rs
crates/plugin/mc-plugin-host/src/host/: activation.rs  callbacks.rs  catalog.rs  failure.rs  generation.rs  loader.rs  mod.rs  reload.rs  status.rs
crates/plugin/mc-plugin-host/src/host/profiles/: admin_surface.rs  gameplay.rs  managed.rs  mod.rs  protocol.rs  shared.rs
crates/plugin/mc-plugin-host/src/host/support/: describe.rs  invoke.rs  manifest.rs  mod.rs  reload.rs
crates/plugin/mc-plugin-host/src/host/tests/: admin_surface.rs  discovery.rs  failure_policy.rs  gameplay_query.rs  mod.rs  packaged_reload.rs  profiles.rs  support.rs  test_plugins.rs
crates/plugin/mc-plugin-host/src/plugin_host/: activation.rs  callbacks.rs  catalog.rs  failure.rs  generation.rs  loader.rs  profiles.rs  reload.rs  status.rs  support.rs  tests.rs  topology.rs
crates/plugin/mc-plugin-host/src/plugin_host/profiles/: admin_transport.rs  admin_ui.rs  auth.rs  gameplay.rs  managed.rs  mod.rs  protocol.rs  shared.rs  storage.rs
crates/plugin/mc-plugin-host/src/plugin_host/support/: buffers.rs  describe.rs  mod.rs  (+4 more)
crates/plugin/mc-plugin-sdk-rust/: Cargo.toml
crates/plugin/mc-plugin-sdk-rust/src/: admin_surface.rs  admin_transport.rs  admin_ui.rs  auth.rs  buffers.rs  capabilities.rs  entrypoints.rs  gameplay.rs  internal.rs  lib.rs  manifest.rs  protocol.rs  storage.rs  test_support.rs  tests.rs
crates/plugin/mc-plugin-sdk-rust/src/__macro_support/: admin_surface.rs  admin_transport.rs  admin_ui.rs  auth.rs  buffers.rs  gameplay.rs  mod.rs  protocol.rs  storage.rs
crates/plugin/mc-plugin-sdk-rust/src/macros/: auth.rs  export.rs  gameplay.rs  mod.rs  protocol.rs  storage.rs
mc-core/: Cargo.toml
mc-core/src/: lib.rs
mc-plugin-api/: Cargo.toml
mc-plugin-api/src/: auth_codec.rs  lib.rs  protocol_codec.rs
mc-plugin-auth-bedrock-offline/: Cargo.toml
mc-plugin-auth-online-stub/: Cargo.toml
mc-plugin-gameplay-readonly/: Cargo.toml
mc-plugin-proto-be-26_3/: Cargo.toml
mc-plugin-proto-be-26_3/src/: lib.rs
mc-plugin-proto-be-placeholder/: Cargo.toml
mc-plugin-proto-be-placeholder/src/: lib.rs
mc-plugin-proto-je-1_12_2/: Cargo.toml
mc-plugin-proto-je-1_12_2/src/: lib.rs
mc-plugin-proto-je-1_7_10/: Cargo.toml
mc-plugin-proto-je-1_7_10/src/: lib.rs
mc-plugin-storage-je-anvil-1_7_10/: Cargo.toml
mc-plugin-storage-je-anvil-1_7_10/src/: lib.rs
mc-proto-be-placeholder/: Cargo.toml
mc-proto-be-placeholder/src/: lib.rs
mc-proto-je-1_7_10/: Cargo.toml
mc-proto-je-1_7_10/src/: lib.rs  storage.rs
mc-proto-je-1_8_x/: Cargo.toml
mc-proto-je-1_8_x/src/: lib.rs
server-bootstrap/: Cargo.toml
server-bootstrap/src/: main.rs
server-runtime/: Cargo.toml
server-runtime/src/: lib.rs  main.rs  plugin_host.rs
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
(+397 files in other folders)
