[workspace]
members = [
    "revycraft-client",
    "mc-core",
    "mc-plugin-api",
    "mc-plugin-gameplay-canonical",
    "mc-plugin-gameplay-readonly",
    "mc-plugin-auth-offline",
    "mc-plugin-sdk-rust",
    "mc-plugin-storage-je-anvil-1_7_10",
    "mc-plugin-proto-be-placeholder",
    "mc-plugin-proto-je-1_12_2",
    "mc-plugin-proto-je-1_7_10",
    "mc-plugin-proto-je-1_8_x",
    "mc-proto-common",
    "mc-proto-be-placeholder",
    "mc-proto-je-common",
    "mc-proto-je-1_7_10",
    "mc-proto-je-1_8_x",
    "mc-proto-je-1_12_2",
    "server-runtime",
    "server-bootstrap",
    "xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jungamer-64/RevyCraft"
readme = "README.md"
keywords = ["minecraft", "voxel", "server", "protocol", "sandbox"]
categories = ["game-development", "network-programming"]

[workspace.dependencies]
bevy = { version = "0.18", features = ["bevy_ui", "bevy_text", "debug"] }
bytes = "1.10"
flate2 = "1.1"
md5 = { package = "md-5", version = "0.10" }
noise = "0.9"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
toml = "1.0"
tokio = { version = "1.47", features = ["macros", "net", "rt-multi-thread", "sync", "time", "io-util", "signal"] }
uuid = { version = "1.18", features = ["v3", "serde"] }
libloading = "0.9"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"
