[workspace]
members = [
    "apps/*",
    "crates/*/*",
    "plugins/*/*",
    "tools/*",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jungamer-64/RevyCraft"
readme = "README.md"
keywords = ["minecraft", "voxel", "server", "protocol", "sandbox"]
categories = ["game-development", "network-programming"]

[workspace.dependencies]
aes = "0.8"
base64 = "0.22"
bedrock-jwt = "0.1"
bedrockrs_network = { git = "https://github.com/bedrock-crustaceans/bedrock-rs.git", package = "bedrockrs_network", rev = "b31e945b2cfa1ba76aa5aac492d0b6e0b4c0146d" }
bedrockrs_proto = { git = "https://github.com/bedrock-crustaceans/bedrock-rs.git", package = "bedrockrs_proto", rev = "b31e945b2cfa1ba76aa5aac492d0b6e0b4c0146d" }
bedrockrs_proto_core = { git = "https://github.com/bedrock-crustaceans/bedrock-rs.git", package = "bedrockrs_proto_core", rev = "b31e945b2cfa1ba76aa5aac492d0b6e0b4c0146d" }
bytes = "1.10"
flate2 = "1.1"
md5 = { package = "md-5", version = "0.10" }
nbtx = "2.0"
num-bigint = "0.4"
num-traits = "0.2"
p384 = { version = "0.13", features = ["pkcs8"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "query", "rustls"] }
rsa = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
socket2 = "0.6"
tempfile = "3.20"
thiserror = "2.0"
toml = "1.0"
tokio = { version = "1.47", features = ["macros", "net", "rt-multi-thread", "sync", "time", "io-util", "signal"] }
uuid = { version = "1.18", features = ["v3", "serde"] }
vek = "0.17"
libloading = "0.9"
prost = "0.14"
protoc-bin-vendored = "3"
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
cargo = "deny"
nursery = "deny"
