[package]
name = "mc-plugin-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Stable C ABI and binary envelope contract for RevyCraft runtime plugins."

[dependencies]
mc-core = { path = "../mc-core" }
mc-proto-common = { path = "../mc-proto-common" }
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
