[package]
name = "mc-plugin-proto-be-26_3"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Bedrock 26.3 protocol plugin for the RevyCraft runtime host."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
disable-exported-symbols = []

[dependencies]
mc-core = { path = "../mc-core" }
mc-plugin-api = { path = "../mc-plugin-api" }
mc-plugin-sdk-rust = { path = "../mc-plugin-sdk-rust" }
mc-proto-be-26_3 = { path = "../mc-proto-be-26_3" }
mc-proto-common = { path = "../mc-proto-common" }

[lints]
workspace = true
