[package]
name = "mc-plugin-proto-be-placeholder"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Bedrock placeholder protocol plugin for the RevyCraft runtime host."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
disable-exported-symbols = []

[dependencies]
mc-core = { path = "../mc-core" }
mc-plugin-api = { path = "../mc-plugin-api" }
mc-plugin-sdk-rust = { path = "../mc-plugin-sdk-rust" }
mc-proto-be-placeholder = { path = "../mc-proto-be-placeholder" }
mc-proto-common = { path = "../mc-proto-common" }

[lints]
workspace = true
