[package]
name = "mc-proto-be-placeholder"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Bedrock placeholder protocol probe for shared-port UDP listener support."

[dependencies]
bytes.workspace = true
mc-core = { path = "../mc-core" }
mc-proto-common = { path = "../mc-proto-common" }

[lints]
workspace = true
