[package]
name = "mc-proto-je-1_7_10"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
flate2.workspace = true
mc-core = { path = "../mc-core" }
mc-proto-common = { path = "../mc-proto-common" }
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
