[package]
name = "mc-proto-je-1_8_x"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Minecraft Java Edition 1.8.x protocol codecs."

[dependencies]
mc-core = { path = "../mc-core" }
mc-proto-common = { path = "../mc-proto-common" }
mc-proto-je-common = { path = "../mc-proto-je-common" }
serde_json.workspace = true
uuid.workspace = true

[lints]
workspace = true
