[package]
name = "server-bootstrap"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Standalone server bootstrap that wires built-in storage and plugin host for RevyCraft."

[dependencies]
mc-proto-je-1_7_10 = { path = "../mc-proto-je-1_7_10" }
server-runtime = { path = "../server-runtime" }
tokio.workspace = true

[lints]
workspace = true
