[package]
name = "server-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Protocol-agnostic dedicated server runtime for the RevyCraft workspace."

[dependencies]
aes.workspace = true
bytes.workspace = true
libloading.workspace = true
mc-core = { path = "../mc-core" }
mc-plugin-api = { path = "../mc-plugin-api" }
mc-proto-common = { path = "../mc-proto-common" }
md5.workspace = true
num-bigint.workspace = true
rand.workspace = true
rsa.workspace = true
serde.workspace = true
sha1.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
mc-plugin-auth-offline = { path = "../mc-plugin-auth-offline", features = ["disable-exported-symbols"] }
mc-plugin-auth-online-stub = { path = "../mc-plugin-auth-online-stub", features = ["disable-exported-symbols"] }
mc-plugin-gameplay-canonical = { path = "../mc-plugin-gameplay-canonical", features = ["disable-exported-symbols"] }
mc-plugin-gameplay-readonly = { path = "../mc-plugin-gameplay-readonly", features = ["disable-exported-symbols"] }
mc-plugin-proto-be-placeholder = { path = "../mc-plugin-proto-be-placeholder", features = ["disable-exported-symbols"] }
mc-plugin-proto-je-1_12_2 = { path = "../mc-plugin-proto-je-1_12_2", features = ["disable-exported-symbols"] }
mc-plugin-proto-je-1_7_10 = { path = "../mc-plugin-proto-je-1_7_10", features = ["disable-exported-symbols"] }
mc-plugin-proto-je-1_8_x = { path = "../mc-plugin-proto-je-1_8_x", features = ["disable-exported-symbols"] }
mc-plugin-storage-je-anvil-1_7_10 = { path = "../mc-plugin-storage-je-anvil-1_7_10", features = ["disable-exported-symbols"] }
mc-proto-be-placeholder = { path = "../mc-proto-be-placeholder" }
mc-proto-je-common = { path = "../mc-proto-je-common" }
mc-proto-je-1_12_2 = { path = "../mc-proto-je-1_12_2" }
mc-proto-je-1_7_10 = { path = "../mc-proto-je-1_7_10" }
mc-proto-je-1_8_x = { path = "../mc-proto-je-1_8_x" }
tempfile.workspace = true

[lints]
workspace = true
