[package]
name = "revycraft-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A Bevy-based voxel sandbox client kept as a local standalone client."

[dependencies]
bevy.workspace = true
noise.workspace = true

[lints]
workspace = true
