[package]
name = "revy-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Standalone server bootstrap that wires the plugin host for RevyCraft."

[[bin]]
name = "server-bootstrap"
path = "src/main.rs"

[dependencies]
mc-core = { path = "../../crates/core/mc-core" }
mc-plugin-api = { path = "../../crates/plugin/mc-plugin-api" }
mc-plugin-host = { path = "../../crates/plugin/mc-plugin-host" }
mc-proto-common = { path = "../../crates/protocol/mc-proto-common" }
revy-admin-grpc = { path = "../../crates/admin/revy-admin-grpc" }
revy-server-config = { path = "../../crates/runtime/revy-server-config" }
revy-server-runtime = { path = "../../crates/runtime/revy-server-runtime" }
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
libc = "0.2"
rand = "0.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Pipes", "Win32_System_Threading"] }

[dev-dependencies]
aes.workspace = true
bytes.workspace = true
mc-plugin-test-support = { path = "../../crates/testing/mc-plugin-test-support" }
mc-proto-test-support = { path = "../../crates/testing/mc-proto-test-support" }
rsa.workspace = true
tempfile.workspace = true

[lints]
workspace = true
