[package]
name = "server-bootstrap"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Standalone server bootstrap that wires the plugin host for RevyCraft."

[dependencies]
mc-plugin-host = { path = "../../crates/plugin/mc-plugin-host" }
mc-proto-common = { path = "../../crates/protocol/mc-proto-common" }
revy-admin-grpc = { path = "../../crates/runtime/revy-admin-grpc" }
server-config = { path = "../../crates/config/server-config" }
server-runtime = { path = "../../crates/runtime/server-runtime" }
tokio.workspace = true
tonic.workspace = true

[dev-dependencies]
mc-plugin-test-support = { path = "../../crates/testing/mc-plugin-test-support" }
tempfile.workspace = true

[lints]
workspace = true
