[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Workspace automation tasks for packaging RevyCraft protocol plugins."

[lints]
workspace = true
