[package]
name = "mc-content-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared content identifiers and container specifications for RevyCraft."

[dependencies]
serde.workspace = true

[lints]
workspace = true
