[package]
name = "mc-content-canonical"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Canonical Minecraft-like content behavior for RevyCraft."

[dependencies]
revy-voxel-rules = { path = "../revy-voxel-rules" }
revy-voxel-model = { path = "../../model/revy-voxel-model" }
serde.workspace = true

[lints]
workspace = true
