[package]
name = "revy-voxel-rules"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared voxel content identifiers and simulation rules for RevyCraft."

[dependencies]
revy-voxel-model = { path = "../../model/revy-voxel-model" }
serde.workspace = true

[lints]
workspace = true
