[package]
name = "mc-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Version-agnostic Minecraft world, player, event, and server-core types."

[dependencies]
mc-content-api = { path = "../../content/mc-content-api" }
mc-model = { path = "../../model/mc-model" }
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
mc-content-canonical = { path = "../../content/mc-content-canonical" }

[lints]
workspace = true
