[package]
name = "revy-voxel-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Version-agnostic voxel world, player, event, and server-core types."

[dependencies]
revy-core = { path = "../revy-core" }
revy-voxel-rules = { path = "../../content/revy-voxel-rules" }
revy-voxel-model = { path = "../../model/revy-voxel-model" }
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
mc-content-canonical = { path = "../../content/mc-content-canonical" }
uuid.workspace = true

[lints]
workspace = true
