[package]
name = "revy-voxel-model"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared voxel world, inventory, and interaction model types for RevyCraft."

[dependencies]
num-traits.workspace = true
serde.workspace = true

[lints]
workspace = true
