[package]
name = "mc-plugin-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Stable C ABI and binary envelope contract for RevyCraft runtime plugins."

[dependencies]
mc-content-api = { path = "../../content/mc-content-api" }
mc-core = { path = "../../core/mc-core" }
mc-model = { path = "../../model/mc-model" }
mc-proto-common = { path = "../../protocol/mc-proto-common" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
mc-content-canonical = { path = "../../content/mc-content-canonical" }

[lints]
workspace = true
