[package]
name = "mc-plugin-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Dynamic plugin host, catalog, and runtime profile management for RevyCraft."

[features]
disable-exported-symbols = []
in-process-testing = []

[dependencies]
bytes.workspace = true
libloading.workspace = true
mc-core = { path = "../../core/mc-core" }
mc-plugin-api = { path = "../mc-plugin-api" }
mc-proto-common = { path = "../../protocol/mc-proto-common" }
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
mc-plugin-auth-offline = { path = "../../../plugins/auth/mc-plugin-auth-offline", features = ["disable-exported-symbols", "in-process-testing"] }
mc-plugin-gameplay-canonical = { path = "../../../plugins/gameplay/mc-plugin-gameplay-canonical", features = ["disable-exported-symbols", "in-process-testing"] }
mc-plugin-gameplay-readonly = { path = "../../../plugins/gameplay/mc-plugin-gameplay-readonly", features = ["disable-exported-symbols", "in-process-testing"] }
mc-plugin-sdk-rust = { path = "../mc-plugin-sdk-rust", features = ["in-process-testing"] }
mc-plugin-proto-be-26_3 = { path = "../../../plugins/protocol/mc-plugin-proto-be-26_3", features = ["disable-exported-symbols", "in-process-testing"] }
mc-plugin-proto-be-placeholder = { path = "../../../plugins/protocol/mc-plugin-proto-be-placeholder", features = ["disable-exported-symbols", "in-process-testing"] }
mc-plugin-proto-je-1_12_2 = { path = "../../../plugins/protocol/mc-plugin-proto-je-1_12_2", features = ["disable-exported-symbols", "in-process-testing"] }
mc-plugin-proto-je-1_7_10 = { path = "../../../plugins/protocol/mc-plugin-proto-je-1_7_10", features = ["disable-exported-symbols", "in-process-testing"] }
mc-plugin-proto-je-1_8_x = { path = "../../../plugins/protocol/mc-plugin-proto-je-1_8_x", features = ["disable-exported-symbols", "in-process-testing"] }
mc-plugin-storage-je-anvil-1_7_10 = { path = "../../../plugins/storage/mc-plugin-storage-je-anvil-1_7_10", features = ["disable-exported-symbols", "in-process-testing"] }
mc-proto-be-26_3 = { path = "../../protocol/mc-proto-be-26_3" }
mc-proto-be-placeholder = { path = "../../protocol/mc-proto-be-placeholder" }
mc-proto-je-1_12_2 = { path = "../../protocol/mc-proto-je-1_12_2" }
mc-proto-je-1_7_10 = { path = "../../protocol/mc-proto-je-1_7_10" }
mc-proto-je-1_8_x = { path = "../../protocol/mc-proto-je-1_8_x" }
tempfile.workspace = true

[lints]
workspace = true
