[package]
name = "mc-plugin-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Dynamic plugin host, catalog, and runtime profile management for RevyCraft."

[features]
disable-exported-symbols = []
in-process-testing = []

[dependencies]
bytes.workspace = true
libloading.workspace = true
mc-core = { path = "../../core/mc-core" }
mc-plugin-api = { path = "../mc-plugin-api" }
mc-proto-common = { path = "../../protocol/mc-proto-common" }
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
mc-plugin-admin-console = { path = "../../../plugins/admin/mc-plugin-admin-console", features = ["disable-exported-symbols", "in-process-testing"] }
mc-plugin-auth-offline = { path = "../../../plugins/auth/mc-plugin-auth-offline", features = ["disable-exported-symbols", "in-process-testing"] }
mc-plugin-gameplay-canonical = { path = "../../../plugins/gameplay/mc-plugin-gameplay-canonical", features = ["disable-exported-symbols", "in-process-testing"] }
mc-plugin-gameplay-readonly = { path = "../../../plugins/gameplay/mc-plugin-gameplay-readonly", features = ["disable-exported-symbols", "in-process-testing"] }
mc-plugin-sdk-rust = { path = "../mc-plugin-sdk-rust", features = ["in-process-testing"] }
mc-plugin-test-support = { path = "../../testing/mc-plugin-test-support" }
mc-plugin-proto-be-924 = { path = "../../../plugins/protocol/be-924/mc-plugin-proto-be-924", features = ["disable-exported-symbols", "in-process-testing"] }
mc-plugin-proto-be-placeholder = { path = "../../../plugins/protocol/be-placeholder/mc-plugin-proto-be-placeholder", features = ["disable-exported-symbols", "in-process-testing"] }
mc-plugin-proto-je-340 = { path = "../../../plugins/protocol/je-340/mc-plugin-proto-je-340", features = ["disable-exported-symbols", "in-process-testing"] }
mc-plugin-proto-je-404 = { path = "../../../plugins/protocol/je-404/mc-plugin-proto-je-404", features = ["disable-exported-symbols", "in-process-testing"] }
mc-plugin-proto-je-5 = { path = "../../../plugins/protocol/je-5/mc-plugin-proto-je-5", features = ["disable-exported-symbols", "in-process-testing"] }
mc-plugin-proto-je-47 = { path = "../../../plugins/protocol/je-47/mc-plugin-proto-je-47", features = ["disable-exported-symbols", "in-process-testing"] }
mc-plugin-storage-je-anvil-1_18_2 = { path = "../../../plugins/storage/mc-plugin-storage-je-anvil-1_18_2", features = ["disable-exported-symbols", "in-process-testing"] }
mc-plugin-storage-je-anvil-1_7_10 = { path = "../../../plugins/storage/mc-plugin-storage-je-anvil-1_7_10", features = ["disable-exported-symbols", "in-process-testing"] }
mc-proto-be-924 = { path = "../../../plugins/protocol/be-924/mc-proto-be-924" }
mc-proto-be-placeholder = { path = "../../../plugins/protocol/be-placeholder/mc-proto-be-placeholder" }
mc-proto-je-340 = { path = "../../../plugins/protocol/je-340/mc-proto-je-340" }
mc-proto-je-404 = { path = "../../../plugins/protocol/je-404/mc-proto-je-404" }
mc-proto-je-5 = { path = "../../../plugins/protocol/je-5/mc-proto-je-5" }
mc-proto-je-47 = { path = "../../../plugins/protocol/je-47/mc-proto-je-47" }
tempfile.workspace = true

[lints]
workspace = true
