[package]
name = "mc-plugin-sdk-rust"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust authoring SDK for RevyCraft runtime plugins."

[features]
disable-exported-symbols = []
in-process-testing = []

[dependencies]
bytes.workspace = true
mc-content-api = { path = "../../content/mc-content-api" }
mc-core = { path = "../../core/mc-core" }
mc-model = { path = "../../model/mc-model" }
mc-plugin-api = { path = "../mc-plugin-api" }
mc-proto-common = { path = "../../protocol/mc-proto-common" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
